# notas-fiscais-python

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  NFCE_SCRAPER.md  README.md  compose.override.yaml  compose.yaml  entrypoint.sh  implementation_plan.md  invoice_request_documentation.md  main.py  pyproject.toml
migrations/: README  env.py
src/: dependencies.py  main.py  middleware.py  settings.py  worker.py
src/actions/: activity_log_actions.py  auth_actions.py  base_actions.py  establishment_actions.py  invoice_actions.py  invoice_crud_actions.py  nfce_actions.py  permission_actions.py  product_category_actions.py  product_normalization_actions.py  product_search_actions.py  role_actions.py  user_actions.py
src/dtos/: activity_log_dtos.py  ai_dtos.py  auth_dtos.py  base_dtos.py  category_dtos.py  establishment_dtos.py  invoice_dtos.py  nfce_dtos.py  pagination_dtos.py  permission_dtos.py  product_dtos.py  response_dtos.py  role_dtos.py  user_dtos.py  validators.py
src/entities/: __init__.py  activity_log_entity.py  ai_interaction_entity.py  base_entities.py  canonical_product_entity.py  establishment_entity.py  invoice_entity.py  invoice_item_entity.py  permission_entity.py  product_category_entity.py  product_match_entity.py  refresh_token_entity.py  role_entity.py  role_permission_entity.py  user_entity.py  user_product_category_entity.py  user_product_override_entity.py  user_role_entity.py
src/enums/: activity_event_enum.py  ai_enum.py  permission_enum.py  product_match_method_enum.py
src/exceptions/: __init__.py  handlers.py  (+1 more)
(+52 files in other folders)
