[project]
name = "notas-fiscais-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy[asyncio]>=2.0.49",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
