[project]
name = "notas-fiscais-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "sqlalchemy[asyncio]>=2.0.49",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 88
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT", "FAST"]
ignore = ["PLR0913", "PLR6301", "PLC0415"]

[tool.ruff.format]
preview = true
quote-style = "single"
